♻️ refactor: modificar rota de status para usar header "X-Lojas-IDs" em vez de parâmetros na URL
